Bug 1303970 - Part 1: MEDIA_ERR_ABORTED can be returned even if readyState is HAVE_NOTHING. r=jwwang, a=gchang

So change assertion accordingly.

MozReview-Commit-ID: AuaDlyF0MAL